@@ -302,6 +302,12 @@ Release 2.7.0 - UNRELEASED
     HDFS-7732. Fix the order of the parameters in DFSConfigKeys.
     (Brahma Reddy Battula via aajisaka)
 
+    HDFS-7710. Remove dead code in BackupImage.java. (Xiaoyu Yao via aajisaka)
+
+    HDFS-7738. Revise the exception message for recover lease; add more truncate
+    tests such as truncate with HA setup, negative tests, truncate with other
+    operations and multiple truncates.  (szetszwo)
+
   OPTIMIZATIONS
 
   BUG FIXES
